2006-01-17 Tim
 PATCH: [ 1405344 ] Manual: New icons
  Manual/screenshots: binarydiff.gif equal.gif error.gif fileskip.gif
    folderskip.gif lfile.gif lfolder.gif notequal.gif rfile.gif rfolder.gif
 PATCH: [ 1405261 ] Manual: Background colors for Notes and Co. (XSL)
  Manual/build: build_html.bat build_html.xsl build_htmlhelp.bat build_htmlhelp.xsl
  Manual/css: all.css help.css print.css

2006-01-14 Perry
 PATCH: [ 1403457 ] Support Unicode file filter files
  Remove limitation (file filters now handle unicode files)
  (reverses my PATCH: [ 1401001 ])
  Manual: Filters.xml

2006-01-11 Kimmo
 Update copyright year, WinMerge version to 2.5 and revision
  Manual: WinMerge_help.xml
 PATCH: [ 1382020 ] New FAQ entry for large file Quick Compare
  Submitted by Perry
  Manual: Faq.xml
 PATCH: [ 1401001 ] Add note to filters manual that Unicode is not supported
  Submitted by Perry
  Manual: Filters.xml

2006-01-08 Perry
 BUG: [ 1396950 ] Manual installation doesn't specify admin access
  Manual: Install.xml

2005-12-21 Kimmo
 BUG: [ 1384832 ] ulink has ??? in FAQ
  Manual: Faq.xml

2005-12-20 Perry
 PATCH: [ 1384834 ] Copyedited FAQ
  Manual: Faq.xml

2005-12-19 Perry
 BUG: [ 1384830 ] FAQ suggests non-proportional fonts available in 2.4+
  removed version numbers ("WinMerge does not support non-proportional fonts")
  Manual: Faq.xml

2005-12-08 Kimmo
 PATCH: [ 1375564 ] New encoding FAQ (UTF-8)
  Submitted by Perry
  Manual: Faq.xml

2005-11-09 Kimmo
 PATCH: [ 1351769 ] Manual: Minor update to file compare chapter
  Manual: Compare_files.xml

2005-11-08 Kimmo
 PATCH: [ 1350794 ] Manual: Update About doc chapter
  Manual: About_Doc.xml
 PATCH: [ 1350819 ] Manual: Small improvements for folder compare
  Manual: Compare_dirs.xml

2005-11-01 Kimmo
 PATCH: [ 1344213 ] Manual: typo fixes for Configuration part
  Manual: Configuration.xml
 PATCH: [ 1344219 ] Manual: New FAQ items about archive files detection
  Manual: Faq.xml

2005-10-29 Kimmo